Cleaning up the repository to focus on what's important

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,6 @@
     },
     "include": [
         "plugins",
-        "node_modules/vendetta-types",
-        "ApplicationCommandTypes.ts"
+        "node_modules/vendetta-types"
     ]
 }
