--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
 	"private": true,
 	"scripts": {
-		"build": "node build.mjs",
-		"deploy": "node build.mjs deploy"
+		"build": "node build.mjs"
 	},
 	"dependencies": {
-		"@swc/helpers": "^0.5.1"
+		"@swc/helpers": "^0.4.14"
 	},
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "^25.0.0",
-		"@rollup/plugin-node-resolve": "^15.0.2",
-		"@swc/core": "^1.3.58",
-		"esbuild": "^0.17.19",
-		"rollup": "^3.21.7",
+		"@rollup/plugin-commonjs": "^24.0.0",
+		"@rollup/plugin-node-resolve": "^15.0.1",
+		"@swc/core": "^1.3.35",
+		"esbuild": "^0.16.14",
+		"rollup": "^3.9.1",
 		"rollup-plugin-esbuild": "^5.0.0",
-		"vendetta-types": "^2.4.19"
+		"vendetta-types": "latest"
 	},
 	"pnpm": {
 		"peerDependencyRules": {
